# music-player

./: README.md  app.py  dockerfile  pyproject.toml
templates/: index.html
