[tool.poetry]
name = "flask_music_player"
version = "0.1.0"
description = "A simple Flask-based music player."
authors = ["Matthias Püski"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2"
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"